<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_50"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/red"
            android:text="@string/home_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@color/orange"
            android:text="@string/registration_view_header"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:background="@color/blue"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:inputType="text"
                android:text="@string/field_nama"
                android:textAlignment="center"
                android:textColor="@color/white" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:inputType="text"
                android:text="@string/field_email"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:inputType="text"
                android:text="@string/username_field"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:inputType="text"
                android:text="@string/password_field"
                android:textAlignment="center"
                android:textColor="@color/white" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@color/green"
                android:inputType="text"
                android:text="@string/confirm_password_field"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_registration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/blue"
        android:text="@string/registration_button"
        android:textAlignment="center"
        android:textColor="@color/white" />


</LinearLayout>